--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -89,10 +89,39 @@
     font-size: 1.5rem;
     height: 50px;
 }
+.btn__submit:disabled {
+    background: #ccc;
+    color: #429667;
+}
+.error__message {
+    background: #f87e7e;
+    margin: 10px;
+}
 .btn__submit:hover{
     background-color: #fff;
     color: #127A40;
 }
+
+.sidebar-menu {
+    width: 300px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -300px;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-transition: .3s ease all;
+    transition: .3s ease all;
+    background: #333;
+}
+.sidebar-menu.open {
+    -webkit-transform: translateX(300px);
+    transform: translateX(300px);
+}
+.sidebar-menu.open .menu  a {
+    padding: 15px 20px;
+    color: #fff;
+  }
 @media (max-width: 767px){
     .form {
         width: 80%;
