--- a/src/style/App.css
+++ b/src/style/App.css
@@ -14,8 +14,15 @@ body * {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: black 1px -3px 16px;
 }
-
+.header__name {
+    text-transform: capitalize;
+    font-weight: 500;
+}
+.header__name--color{
+    color: #fff;
+}
 .footer {
     height: 80px;
     background-color: rgba(200, 213, 185, 0.16);
@@ -23,9 +30,8 @@ body * {
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    max-width: 100%;
+    margin-top: 100px;
     padding: 20px 50px;
 }
 
@@ -42,9 +48,99 @@ body * {
     color: #127A40;
     text-decoration: underline;
 }
+.noShow,
+.menuToggle--noShow {
+    display: none;
+}
 
-@media (max-width: 767px){
-    .header {
-        justify-content: center;
-    }
+.header__menu-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header__userinfo {
+    line-height: 40px;
+}
+
+
+.iconHamburguer div{
+    width: 35px;
+    height: 5px;
+    background: #fff;
+    margin: 6px 0;
+}
+
+.menuToggleButton{
+  background: none;
+  border: none;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.header__logout {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    text-align: right;
+    width: 100%;
+    display: block;
+}
+
+.menuToggle {
+    width: 300px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -320px;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-transition: .3s ease all;
+    transition: .3s ease all;
+    background: #fcfcfc;
+    padding: 10px;
+    box-shadow: #000 2px 2px 14px;
+}
+
+.menuToggle--open{
+    -webkit-transform: translateX(320px);
+    transform: translateX(320px);
+}
+
+.menuToggle__element {
+    margin-bottom: 20px;
+}
+
+.menuToggle__element a {
+    list-style: none;
+    text-decoration: none;
+    font-size: 1.8rem;
+    color: #000;
+    width: 100%;
+    display:block;
+    padding: 10px 0;
+}
+
+.menuToggle__element a:hover{
+    background: #429667;
+    color: #fff;
+}
+
+.menuToggle__header {
+    display: flex;
+    justify-content: space-between;
+    background: #429667;
+    font-size: 1.8rem;
+    padding: 10px;
+    margin-bottom: 20px;
+    color: #fff;
+    font-weight: bold;
+}
+
+.menuToggle__button {
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #fff;
+    cursor: pointer;
 }
