--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -81,8 +81,8 @@
     text-transform: capitalize;
 }
 .btn__submit {
-    background-color: #127A40;
-    border: 2px solid #2E8B57;
+    background-color: #0d5e31;
+    border: 2px solid #0d5e31;
     border-radius: 10px;
     color: #fff;
     cursor: pointer;
