--- a/src/pages/my-honorarios/my-honorarios.css
+++ b/src/pages/my-honorarios/my-honorarios.css
@@ -1,12 +1,12 @@
 .honorarios__content {
     border-radius: 10px;
     background-color: rgba(21, 97, 15, 0.06);
-    padding: 20px 0;
+    padding: 20px 10px;
     width: 80%;
     margin: 10px auto;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .honorarios__title {
