--- a/src/pages/calc-honorarios/honorarios.css
+++ b/src/pages/calc-honorarios/honorarios.css
@@ -9,17 +9,21 @@
     justify-content: space-between;
 }
 
+.new_calc_titles--bold{
+    font-weight: bold;
+}
+
 .honorarios-content {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10px;
+    padding: 20px;
     background-color: #15610f0f;
     border-radius: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
-    box-shadow: black 0px 1px 7px 0px;
+    border: 3px solid #c3c9bd;
 }
 
 .honorarios-btn{
@@ -31,7 +35,6 @@
     color: #fff;
     text-align: center;
     text-decoration: none;
-    box-shadow: black 1px 3px 8px;
 }
 
 .new_calc_input:focus,
@@ -67,15 +70,20 @@
     flex-wrap: wrap;
 }
 .new_calc_titles {
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
 }
 
+
+
+.new_calc_titles.new_calc_titles--data {
+    width: 30%;
+}
+
 .new_calc__area-button__content{
     width: 100%;
-    margin-top: 20px;
 }
 
 .new_calc_title {
@@ -91,7 +99,20 @@
     border: 1px solid #ccc;
     height: 38px;
     padding: 0 10px;
-    width: 50%;
+    width: 80%;
+}
+
+.new_calc_input.new_calc_input--data{
+    width: 90%;
+    padding: 0 5px;
+}
+
+.new_calc_input.new_calc_input--data::placeholder{
+    color: #ff0;
+}
+
+.new_calc_input:first-child{
+    margin-right: 5px;
 }
 
 .new_calc_divisor {
@@ -99,10 +120,14 @@
     border: 1px solid #429667;
 }
 
+.honorarios__titles {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+}
+
 .new_calc_column-name {
-    width: 100%;
     display: block;
-    padding: 10px 0;
     margin: 0 5px;
 }
 
@@ -110,8 +135,14 @@
     width: 98%;
 }
 .new_calc_column {
-    width: 29%;
+    width: 27%;
     margin-left: 5px;
+    position: relative;
+}
+.new_calc_column-name {
+    position: absolute;
+    left: 100%;
+    width: auto;
 }
 .new_calc_input.new_calc_titles--size {
     padding: 10px;
@@ -137,6 +168,7 @@
 }
 
 .new_calc__area-button {
+    position: relative;
     border: none;
     margin-left: 15px;
     font-size: 1.5rem;
@@ -148,6 +180,12 @@
     border-radius: 50%;
     box-shadow: black -1px 0px 6px;
 }
+
+button.new_calc__area-button.new_calc__area-button--salve {
+    font-size: 8px;
+    margin-bottom: 5px;
+}
+
 .new_calc__area-button--remove {
     background: #5e0d0d;
 }
@@ -177,8 +215,61 @@
 
 .new_calc_column__select {
     height: 40px;
-    width: 40px;
+    width: auto;
     margin: 0 5px;
+}
+
+.new_calc_area__titles {
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+    justify-content: space-between;
+}
+
+.new_calc_area__title {
+    font-size: 1.4rem;
+    position: relative;
+}
+
+.new_calc_area_tooltip {
+    display: none;
+    background: #effae3;
+    border: 2px solid #0d5e31;
+    border-radius: 5px;
+    font-size: 10px;
+    padding: 13px;
+    line-height: 1.6;
+    width: auto;
+    max-width: 170px;
+    z-index: 1;
+}
+.new_calc__info:hover .new_calc_area_tooltip,
+.new_calc_area__title:hover .new_calc_area_tooltip{
+    display: inline-block;
+    color: #000;
+    position: absolute;
+    bottom: 0;
+    left: 20%;
+    text-align: justify;
+    opacity: 0.8;
+}
+
+.new_calc_column-input--saida{
+    pointer-events: none;
+}
+
+.new_calc__info {
+    font-size: 10px;
+    border: 1px solid #222;
+    color: #222;
+    background: #ccc;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 31px;
 }
 
 .new_calc_btn.new_calc_btn--salve {
@@ -189,6 +280,10 @@
     background-color: #000;
 }
 
+.new_calc_column.new_calc_column--total + .new_calc__area-button__content {
+    margin-top: 20px;
+}
+
 @media(max-width:767px){
     .new_calc_titles {
         width: 100%;
@@ -197,5 +292,19 @@
     .new_calc_titles--size{
         width: 97%;
         padding: 0 5px;
+    }
+    .new_calc_column{
+        width: 33%;
+    }
+    .new_calc_column.new_calc_column--total {
+        width: 80%;
+        margin: 10px 0;
+    }
+    .new_calc_input.new_calc_input--data{
+        width: 97%;
+    }
+    .new_calc_input.new_calc_input--data
+    .new_calc_area__title {
+        font-size: 12px;
     }
 }
